--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal.website",
-  "homepage": "https://blazelisk.github.io/personal-website"
+  "homepage": "https://blazelisk.github.io/personal-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
