change to personal

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "React App",
   "name": "Benjamin Bui",
-  "homepage": "https://blazelisk.github.io/me",
+  "homepage": ".",
   "icons": [
     {
       "src": "favicon.ico",
