--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal.website",
-  "homepage": "benjaminbui.com",
+  "homepage": "https://blazelisk.github.io",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -12,7 +12,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
